# TouchScreenDriver

./: .gitignore  CMakeLists.txt  apply_monitor_transform.sh  build.sh  test_guide.txt
src/cpp/: device_helper.hpp  ini_parser.cpp  ini_parser.hpp  test.cpp  touch_reader.cpp  touch_reader.hpp  touch_reader_api.cpp
src/csharp/: MonitorInfo.cs  TouchScreenAsyncExample.cs  TouchScreenExample.csproj  TouchScreenLib.cs
